--- a/src/app/profile/list-profiles/list-profiles.component.html
+++ b/src/app/profile/list-profiles/list-profiles.component.html
@@ -22,7 +22,7 @@
 
   <ng-container matColumnDef="dob">
     <th mat-header-cell *matHeaderCellDef> DOB </th>
-    <td mat-cell *matCellDef="let element"> {{element.dob}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.dob | date: 'dd/MM/yyyy' }} </td>
   </ng-container>
 
   <ng-container matColumnDef="role">
